--- a/tests/qunit.html
+++ b/tests/qunit.html
@@ -9,7 +9,7 @@
 <div id="qunit"></div>
 <div id="qunit-fixture"></div>
 <script src="http://code.jquery.com/qunit/qunit-1.14.0.js"></script>
-<script src="../classList.js"></script>
+<script src="../src/index.js"></script>
 <script src="tests.js"></script>
 <script src="remove.js"></script>
 </body>
